GNOME Bugzilla – Bug 674899
ffenc_mpeg2video regression after port to BaseVideoEncoder
Last modified: 2012-04-27 14:54:29 UTC
Created attachment 212907 [details] Crash backtrace The mpeg2video encoder in ffmpeg plugins does not work properly after the port. With v4l2src I get output window bad size with corrupted image at the bottom, and with videotestsrc a crash. My test pipeline was: gst-launch v4l2src ! video/x-raw-yuv,width=640,height=480,framerate=30/1 ! videorate ! ffmpegcolorspace ! ffenc_mpeg2video ! mpeg2dec ! xvimagesink
Created attachment 212910 [details] [review] Fix correctly setting height in AVCodecContext
commit 35cf2e84f25b8c4de306d0b184c32c943a8e07ea Author: Nicolas Dufresne <nicolas.dufresne@collabora.com> Date: Thu Apr 26 15:31:41 2012 -0400 codecmap: correctly set height in AVCodecContext https://bugzilla.gnome.org/show_bug.cgi?id=674899