codecmap: correctly set height in AVCodecContext

https://bugzilla.gnome.org/show_bug.cgi?id=674899